--- a/gnuboard5/theme/basic/css/mobile.css
+++ b/gnuboard5/theme/basic/css/mobile.css
@@ -240,7 +240,7 @@ a.btn_admin:focus, a.btn_admin:hover {}
 .form_01{margin:10px;color:#eee}
 .form_01 .write_div{margin:5px 0;position:relative}
 .form_01 li{margin:5px 0;position:relative;list-style:none}
-.form_01 textarea, .frm_input {border:1px solid #ccc;background:#fff;color:#000;vertical-align:middle;border-radius:3px;padding:5px;}
+.form_01 textarea, .frm_input {border:1px solid #444;background:rgba(17,17,17,0.9);color:#eee;vertical-align:middle;border-radius:3px;padding:5px;}
 .form_01 textarea {width:100%;height:100px}
 .frm_input {height:40px;}
 .full_input{width:100%} 
