--- a/gnuboard5/theme/basic/skin/member/basic/style.css
+++ b/gnuboard5/theme/basic/skin/member/basic/style.css
@@ -139,7 +139,7 @@ box-shadow: 0 1px 3px #eee;
 
 
 /* 회원가입 완료 */
-#reg_result {padding:100px 0 40px;text-align:center;background:#fff}
+#reg_result {padding:100px 0 40px;text-align:center;background:rgba(17, 17, 17, 0.9);color:#eee;}
 #reg_result h2{font-size:2em;margin:0 0 20px}
 #reg_result h2 strong{color:#ed6478}
 #reg_result #result_email {margin:20px 0;padding:10px 50px;border-top:1px solid #e9e9e9;border-bottom:1px solid #dde4e9;background:#fff;line-height:2em}
