--- a/gnuboard5/skin/member/basic/style.css
+++ b/gnuboard5/skin/member/basic/style.css
@@ -31,7 +31,7 @@
 .mbskin a.btn_admin:focus, .mbskin a.btn_admin:hover {}
 
 /* 기본박스 */
-.mbskin{position: relative;margin:100px auto 0;border:1px solid #444;width:400px;background:#fff;text-align:center;
+.mbskin{position: relative;margin:100px auto 0;border:1px solid #444;width:400px;background:rgba(17, 17, 17, 0.9);color:#eee;;text-align:center;
 }
 .mbskin:before,.mbskin:after{
 content:"";
@@ -223,8 +223,8 @@ position:absolute;z-index:-1;top:2%;bottom:0;left:10px;right:10px;
 #mb_confirm h1 {margin:60px 0 30px;font-size:2em}
 #mb_confirm p {padding:0 20px 40px;border-bottom:1px solid #e9e9e9;font-size:1.083em;line-height:1.4em;color:#656565}
 #mb_confirm p strong {display:block;color:#3ca1ff;font-size:1.167em;margin:0 0 5px}
-#mb_confirm fieldset {;padding:50px;text-align:left}
-#mb_confirm fieldset .frm_input {background-color:#fff !important}
+#mb_confirm fieldset {padding:50px;text-align:left}
+#mb_confirm fieldset .frm_input {background-color:rgba(17, 17, 17, 0.9) !important;color:#eee;}
 #mb_confirm label {letter-spacing:-0.1em}
 #mb_confirm_id {display:block;margin:5px 0 10px;font-weight:bold}
 #mb_confirm .confirm_id{font-size:0.92em;color:#666}
