--- a/gnuboard5/mobile/skin/qa/basic/style.css
+++ b/gnuboard5/mobile/skin/qa/basic/style.css
@@ -271,5 +271,5 @@ box-shadow: 0 1px 4px #cbd1df;}
 
 #bo_w .bo_w_flie .lb_icon{position:absolute;top:0px;left:0px;border-radius:3px 0 0 3px;height:38px;line-height:38px;width:40px;background:#eee;text-align:center}
 #bo_w .bo_w_flie .frm_file{padding-left:50px;}
-#bo_w .bo_w_flie .file_wr{border:1px solid #ccc;background:#fff;color:#000;vertical-align:middle;border-radius:3px;padding:5px;height:40px;margin:0}
+#bo_w .bo_w_flie .file_wr{border:1px solid #444;background:rgba(17, 17, 17, 0.9);color:#eee;vertical-align:middle;border-radius:3px;padding:5px;height:40px;margin:0}
 #bo_w .bo_w_flie .frm_input{margin:5px 0 0 }
