--- a/gnuboard5/theme/basic/css/default.css
+++ b/gnuboard5/theme/basic/css/default.css
@@ -250,7 +250,7 @@ transition: all 0.3s ease-out;}
 /* ckeditor 단축키 */
 .cke_sc {margin:0 0 5px;text-align:right}
 .btn_cke_sc{display:inline-block;padding:0 10px;height:23px;border:1px solid #ccc;background:#fafafa;color:#000;text-decoration:none;line-height:1.9em;vertical-align:middle;cursor:pointer}
-.cke_sc_def {margin:0 0 5px;padding:10px;border:1px solid #ccc;background:#f7f7f7;text-align:center}
+.cke_sc_def {margin:0 0 5px;padding:10px;border:1px solid #444;background:rgba(17, 17, 17, 0.9);color:#eee;;text-align:center;}
 .cke_sc_def dl{margin:0 0 5px;text-align:left;zoom:1}
 .cke_sc_def dl:after {display:block;visibility:hidden;clear:both;content:""}
 .cke_sc_def dt, .cke_sc_def dd {float:left;margin:0;padding:5px 0;border-bottom:1px solid #e9e9e9}
