--- a/gnuboard5/theme/basic/mobile/skin/poll/basic/style.css
+++ b/gnuboard5/theme/basic/mobile/skin/poll/basic/style.css
@@ -66,7 +66,7 @@ box-shadow: 0 0 8px #444;
 #poll_result h2 {}
 #poll_result a {}
 #poll_result .sv_member,
-#poll_result .sv_guest {font-weight:bold}
+#poll_result .sv_guest {font-weight:bold;color:#444}
 #poll_result .poll_all{min-width:80px;float:right;display:inline-block;padding:0 5px;margin:0 0 10px;line-height:26px;border:1px solid #ddd;border-radius:3px;font-size:0.92em;background:#fff}
 #poll_result .poll_home{text-align: center;min-width:80px;float:right;display:inline-block;padding:0 5px;margin:0 0 10px;margin-right:10px;line-height:26px;border:1px solid #ddd;border-radius:3px;font-size:0.92em;background:#fff;color:#333;}
 #poll_result .btn_confirm{text-align:right;margin:5px 0 0}
