--- a/gnuboard5/theme/basic/css/mobile.css
+++ b/gnuboard5/theme/basic/css/mobile.css
@@ -26,7 +26,7 @@ ul{list-style:none;}
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
-img.noImage{opacity: 0.5 !important;border:1px solid #444;padding:10px;}
+img.noImage{opacity: 0.5 !important;border:1px solid #444;}
 a.noImage{font-size:0.8em}
 /* 팝업레이어 */
 #hd_pop {z-index:1000;position:relative;margin:0 auto;width:100%;height:0}
