--- a/gnuboard5/theme/basic/css/default.css
+++ b/gnuboard5/theme/basic/css/default.css
@@ -194,9 +194,16 @@ transition: all 0.3s ease-out;}
 
 #aside div.sns-wrap a{background-color: rgba(17, 17, 17, 0.9);;}
 #container {z-index:4;position:relative;float:left;min-height:500px;height:auto !important;margin:20px  0;height:500px;font-size:1em;width:880px;zoom:1;}
+#container a.boardHead{text-decoration: underline;}
 #container:after {display:block;visibility:hidden;clear:both;content:""}
 #container_title {font-size:1.333em;margin:0 auto;font-weight:bold;color:#eee}
-#container_title span{margin:0 auto 10px;display:block;line-height:30px;}
+#container_title span
+{margin:0 auto 10px;display:inline-block;line-height:30px;background: rgba(209, 63, 74, 0.9);color: #fff;font-weight: bold;border-bottom:1px solid rgba(209, 63, 74, 0.3);padding:0 10px;border-radius:3px;    font-size: 0.8em;
+    -webkit-box-shadow: inset 0 2px 5px rgba(209, 63, 74, 0.3);
+    -moz-box-shadow: inset 0 2px 5px rgba(209, 63, 74, 0.3);
+    box-shadow: inset 0 2px 5px rgba(209, 63, 74, 0.3);
+    }
+    /*{margin:0 auto 10px;display:block;line-height:30px;}*/
 /*.latest_wr:after {display:block;visibility:hidden;clear:both;content:""}*/
 .lt_wr{width:49%}
 .lt_wr:nth-child(2n+1){clear:both}
