youtube iframe 적용

--- a/gnuboard5/theme/basic/css/mobile.css
+++ b/gnuboard5/theme/basic/css/mobile.css
@@ -328,3 +328,5 @@ box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.2);}
 
 #faq{background: rgba(17, 17, 17, 0.9);padding:10px;color:#eee;}
 #faq img{max-width:400px;}
+
+.iframe100 {   display: block;   border: none;   height: 100vh;   width: 100vw; }
