--- a/gnuboard5/theme/basic/css/default.css
+++ b/gnuboard5/theme/basic/css/default.css
@@ -479,3 +479,8 @@ box-sizing: content-box;
 
 #faq{background: rgba(17, 17, 17, 0.9);padding:10px;color:#eee;}
 #faq img{max-width:600px;}
+
+.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } 
+.embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+.iframe100 {   display: block;   border: none;   height: 100vh;width:100vw;}
+
