--- a/gnuboard5/theme/basic/css/default.css
+++ b/gnuboard5/theme/basic/css/default.css
@@ -374,6 +374,11 @@ box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
 .form_01 textarea{height:100px;width:100%}
 .form_01 .frm_label{display:inline-block;width:130px}
 
+.form_01 li ul.camp, .form_01 li ul.class_choose, .form_01 li ul.professional{padding-left:20px}
+.form_01 li ul.camp li, .form_01 li ul.class_choose li, .form_01 li ul.professional li{padding-left:20px;display:inline-flex;line-height: 15px;width:125px;}
+.form_01 li ul.camp li img,
+.form_01 li ul.class_choose li img,
+ .form_01 li ul.professional li img{margin-left:10px;width:20px;border-radius:25px}
 /* 자료 없는 목록 */
 .empty_table {padding:50px 0 !important;text-align:center}
 .empty_list {padding:20px 0 !important;color:#666;text-align:center}
