--- a/gnuboard5/theme/basic/css/mobile.css
+++ b/gnuboard5/theme/basic/css/mobile.css
@@ -241,6 +241,11 @@ a.btn_admin:focus, a.btn_admin:hover {}
 .form_01{margin:10px;color:#eee}
 .form_01 .write_div{margin:5px 0;position:relative}
 .form_01 li{margin:5px 0;position:relative;list-style:none}
+.form_01 li ul.camp, .form_01 li ul.class_choose, .form_01 li ul.professional{padding-left:2px}
+.form_01 li ul.camp li, .form_01 li ul.class_choose li, .form_01 li ul.professional li{padding-left:10px;display:inline-flex;line-height: 15px;width:130px;}
+.form_01 li ul.camp li img,
+.form_01 li ul.class_choose li img,
+ .form_01 li ul.professional li img{margin-left:10px;width:20px;border-radius:25px}
 .form_01 textarea, .frm_input {border:1px solid #444;background:rgba(17,17,17,0.9);color:#eee;vertical-align:middle;border-radius:3px;padding:5px;}
 .form_01 textarea {width:100%;height:100px}
 .frm_input {height:40px;}
