--- a/gnuboard5/skin/board/basic/style.css
+++ b/gnuboard5/skin/board/basic/style.css
@@ -219,6 +219,7 @@ box-shadow: inset 0 2px 5px rgb(33, 135, 202);
 #bo_v_info .guest {font-weight:bold}
 #bo_v_info .profile_img {}
 #bo_v_info .profile_img img{border-radius:50%}
+#bo_v_info .comment_profile_img img{border-radius:50%;width:25px;height:25px;border:1px solid #444;}
 #bo_v_info .sv_member{color:#eee}
 #bo_v_info .if_view{display:inline-block;background:url(./img/icon_view.png) no-repeat 50% 50%;height:15px;width:20px;overflow:hidden;text-indent:-999px;vertical-align:middle;margin-right:3px}
 #bo_v_info .if_comment{display:inline-block;background:url(./img/icon_comment.png) no-repeat 50% 50%;height:15px;width:20px;overflow:hidden;text-indent:-999px;vertical-align:middle;margin-right:3px}
@@ -314,6 +315,7 @@ box-shadow: inset 0 2px 5px rgb(33, 135, 202);
 #bo_vc article {margin:20px 0;position:relative}
 #bo_vc article .profile_img img{border-radius:50%}
 #bo_vc header {}
+
 #bo_vc header:after {display:block;visibility:hidden;clear:both;content:""}
 #bo_vc header .icon_reply {position:absolute;top:15px;left:-20px}
 #bo_vc .member, #bo_vc .guest, #bo_vc .sv_member, #bo_vc .sv_guest {font-weight:bold}
@@ -324,7 +326,7 @@ box-shadow: inset 0 2px 5px rgb(33, 135, 202);
 #bo_vc p a.s_cmt {text-decoration:underline;color:#ed6479}
 #bo_vc_empty {margin:0;padding:80px 0 !important;color:#eee;text-align:center}
 #bo_vc #bo_vc_winfo {float:left}
-
+#bo_vc .comment_profile_img img{border-radius:50%;width:25px;height:25px;border:1px solid #444;}
 .bo_vc_act {text-align:right;margin:0;list-style:none;zoom:1}
 .bo_vc_act:after {display:block;visibility:hidden;clear:both;content:""}
 .bo_vc_act li {display:inline-block;}
