--- a/gnuboard5/theme/basic/css/mobile.css
+++ b/gnuboard5/theme/basic/css/mobile.css
@@ -335,3 +335,14 @@ box-shadow: 2px 2px 3px 0px rgba(0,0,0,0.2);}
 #faq img{max-width:400px;}
 
 .iframe100 {   display: block;   border: none;   height: 100vh;   width: 100vw; }
+
+.wow_info_readOnly{color:#eee;background:rgba(17, 17, 17, 0.9);padding:20px;}
+.wow_info_readOnly ul.wow_info{padding:10px;}
+.wow_info_readOnly ul.wow_info li{display:inline-block;line-height: 25px;}
+.wow_info_readOnly ul.wow_info li img{width:25px;margin:0px 10px;border-radius: 25px;}
+.wow_info_readOnly ul.wow_info li ul{padding:10px}
+
+.wow_info_readOnly ul.wow_info li ul.camp li{display:block;width:100%}
+.wow_info_readOnly ul.wow_info li ul.camp li input{margin-top:0px;}
+.wow_info_readOnly ul.wow_info li ul li{display:inline-flex;width:48%;}
+.wow_info_readOnly ul.wow_info li ul li input{margin-top:5px;}
