--- a/gnuboard5/mobile/skin/board/gallery/style.css
+++ b/gnuboard5/mobile/skin/board/gallery/style.css
@@ -209,7 +209,7 @@ box-shadow: 0 0 8px rgba(65,98,255,0.8);}
 #bo_v_img a.view_image{display:block}
 #bo_v_img img {margin-bottom:15px;max-width:100%;height:auto}
 
-#bo_v_con {min-height:200px;margin-bottom:20px;width:100%;font-size:1.250em;line-height:1.7em;word-break:break-all;overflow:hidden}
+#bo_v_con {min-height:200px;margin-bottom:20px;width:100%;font-size:1.250em;line-height:1.7em;word-break:break-all;overflow-x:auto}
 #bo_v_con a {color:#35b3dc;text-decoration:underline}
 #bo_v_con img {max-width:100%;height:auto}
 
