--- a/gnuboard5/mobile/skin/connect/basic/style.css
+++ b/gnuboard5/mobile/skin/connect/basic/style.css
@@ -11,7 +11,7 @@
 -webkit-box-shadow: 0 1px 4px #444;
    -moz-box-shadow: 0 1px 4px #444;
         box-shadow: 0 1px 4px #444;}
-#current_connect .crt_lct{display:block;text-align:center;border-top:1px solid #ddd;padding:10px 5px;line-height:1.4em}
+#current_connect .crt_lct{display:block;text-align:center;border-top:1px solid #ddd;padding:10px 5px;line-height:1.4em;overflow: hidden}
 #current_connect .crt_lct a{color:#3ca1ff}
 #current_connect .crt_num{position:absolute;top:10px;left:10px;color:#777;font-weight:bold}
 #current_connect .empty_li{width:100%;padding:100px 0;color:#777}
