--- a/gnuboard5/skin/connect/basic/style.css
+++ b/gnuboard5/skin/connect/basic/style.css
@@ -8,7 +8,7 @@
 #current_connect li .inner{color:#ddd;position:relative;border:1px solid #444;background:rgba(17, 17, 17, 0.9);;margin-bottom:10px;text-align:center}
 #current_connect .crt_name {margin:20px 20px 15px;display:block;min-height:88px}
 #current_connect .crt_name img{ border-radius:50%;margin: 0 0 5px;max-width:100%;height:auto}
-#current_connect .crt_lct{display:block;text-align:center;border-top:1px solid #ddd;padding:10px 5px;line-height:1.4em}
+#current_connect .crt_lct{display:block;text-align:center;border-top:1px solid #ddd;padding:10px 5px;line-height:1.4em;overflow: hidden}
 #current_connect .crt_lct a{color:#3ca1ff}
 #current_connect .crt_num{position:absolute;top:10px;left:10px;color:#777;font-weight:bold}
 #current_connect li.empty_li{width:100%;padding:200px 0 ;border:0;color:#666}
