--- a/gnuboard5/mobile/skin/board/basic/style.css
+++ b/gnuboard5/mobile/skin/board/basic/style.css
@@ -187,6 +187,8 @@ box-shadow: 0 0 8px rgba(65,98,255,0.8);}
 .bo_v_nb .bo_v_prev{;position:absolute;top:0;left:0;}
 
 #bo_v_atc {min-height:200px}
+#bo_v_atc.dark {padding:10px;}
+#bo_v_atc.white {background:#fff;color:#333;padding:10px;border-radius:7px;}
 #bo_v_atc_title {margin:0;padding:0;height:0;overflow:hidden}
 
 #bo_v_img {margin:0 0 10px;width:100%;overflow:hidden;zoom:1}
@@ -203,7 +205,7 @@ box-shadow: 0 0 8px rgba(65,98,255,0.8);}
 #bo_v_act a {margin-right:5px;vertical-align:middle}
 #bo_v_act a:hover{background-color:#f3f3f3}
 #bo_v_act_good, #bo_v_act_nogood {display:none;position:absolute;top:30px;left:0;padding:10px 0;width:165px;background:#ff3061;color:#fff;text-align:center}
-#bo_v_act .bo_v_good{padding:15px 0;display:inline-block;border:1px solid #000;width:70px;height:70px;line-height:20px;border-radius:50%;font-style:italic}
+#bo_v_act .bo_v_good{padding:15px 0;display:inline-block;border:1px solid #444;width:70px;height:70px;line-height:20px;border-radius:50%;font-style:italic;color:#444}
 #bo_v_act .bo_v_nogood{padding:15px 0;display:inline-block;border:1px solid #000;width:70px;height:70px;line-height:20px;border-radius:50%;font-style:italic}
 #bo_v_act .bo_v_good i,#bo_v_act .bo_v_nogood i{font-size:18px;}
 #bo_v_share{position:relative;margin:20px 0;text-align:right}
