--- a/gnuboard5/skin/board/basic/style.css
+++ b/gnuboard5/skin/board/basic/style.css
@@ -268,9 +268,9 @@ box-shadow: inset 0 2px 5px rgb(33, 135, 202);
 .bo_v_nb li .nb_tit{display:inline-block;padding-right:20px;color:#4567b5}
 .bo_v_nb li .nb_date{float:right;color:#888}
 
-#bo_v_atc {min-height:200px;height:auto !important;height:200px}
-#bo_v_atc.dark {padding:20px;}
-#bo_v_atc.white {background:#fff;color:#333;padding:20px;border-radius:7px;}
+#bo_v_atc {min-height:200px;height:auto !important;height:200px;padding:10px;}
+#bo_v_atc.dark {}
+#bo_v_atc.white {background:#fff;color:#333;border-radius:7px;}
 #bo_v_atc_title {position:absolute;font-size:0;line-height:0;overflow:hidden}
 
 #bo_v_img {width:100%;overflow:hidden;zoom:1}
