--- a/gnuboard5/skin/search/basic/style.css
+++ b/gnuboard5/skin/search/basic/style.css
@@ -27,7 +27,7 @@
 #sch_res_board li {display:inline-block;padding:2px;}
 #sch_res_board a {display:block;line-height:26px;padding:0 10px;border-radius:3px;border:1px solid transparent}
 #sch_res_board a:focus, #sch_res_board a:hover {text-decoration:none;background:#d2d6dc;}
-#sch_res_board .cnt_cmt {font-weight:normal !important;display:inline-block;background:#c4dce0;margin-left:3px;color:#3497d9;border-radius:15px;height:18px;padding:0 5px;line-height:18px;font-size:0.92em}
+#sch_res_board .cnt_cmt {font-weight:normal !important;display:inline-block;background:#c4dce0;margin-left:3px;color:#4ac7ff;border-radius:15px;height:18px;padding:0 5px;line-height:18px;font-size:0.92em}
 #sch_res_board .sch_on  {z-index:2;background:#3497d9;color:#fff;font-weight:bold;border-bottom-color:#1977b5;
 -webkit-box-shadow: inset 0 2px 5px rgb(33, 135, 202);
 -moz-box-shadow: inset 0 2px 5px rgb(33, 135, 202);
