--- a/gnuboard5/theme/basic/mobile/skin/board/gallery/style.css
+++ b/gnuboard5/theme/basic/mobile/skin/board/gallery/style.css
@@ -168,7 +168,7 @@ box-shadow: 0 0 8px rgba(65,98,255,0.8);}
 #bo_v_file li {padding: 10px;border-bottom:1px solid #fff;background:#f1f7fa;color:#777}
 #bo_v_file a {display:block;color:#000;text-decoration:none;margin:0 0 3px}
 #bo_v_file a:focus, #bo_v_file a:hover, #bo_v_file a:active {text-decoration:none}
-#bo_v_file a strong{color:#3497d9;text-decoration:underline}
+#bo_v_file a strong{color:#4ac7ff;text-decoration:underline}
 .bo_v_file_cnt {font-size:0.92em}
 
 #bo_v_link{margin:10px 0}
@@ -176,7 +176,7 @@ box-shadow: 0 0 8px rgba(65,98,255,0.8);}
 #bo_v_link ul {margin:0;padding:0;list-style:none}
 #bo_v_link li {padding: 10px;border-bottom:1px solid #fff;background:#f1f7fa;color:#777}
 #bo_v_link a {display:block;color:#000;text-decoration:none;margin:0 0 3p;overflow: hidden;}
-#bo_v_link a strong{color:#3497d9;text-decoration:underline}
+#bo_v_link a strong{color:#4ac7ff;text-decoration:underline}
 #bo_v_link a:focus, #bo_v_link a:hover, #bo_v_link a:active {text-decoration:none}
 .bo_v_link_cnt {font-size:0.92em}
 
@@ -262,7 +262,7 @@ box-shadow: 0 0 8px rgba(65,98,255,0.8);}
 .bo_vc_act {text-align:right;;margin:0;list-style:none}
 .bo_vc_act:after {display:block;visibility:hidden;clear:both;content:""}
 .bo_vc_act li {display:inline-block;margin:0 2px}
-.bo_vc_act li a{color:#3497d9}
+.bo_vc_act li a{color:#4ac7ff}
 
 .bo_vc_w {position:relative;margin:10px 0;display:block;}
 .bo_vc_w:after {display:block;visibility:hidden;clear:both;content:""}
