--- a/gnuboard5/theme/basic/skin/board/basic/style.css
+++ b/gnuboard5/theme/basic/skin/board/basic/style.css
@@ -221,7 +221,7 @@ box-shadow: inset 0 2px 5px rgb(33, 135, 202);
 #bo_v_file h2 {padding:10px;background: #f3f3f3}
 #bo_v_file ul {margin:0;padding:5px 0;list-style:none}
 #bo_v_file li {padding:5px 10px;position:relative;}
-#bo_v_file a {display:inline-block;color:#3497d9;text-decoration:underline;word-wrap:break-word}
+#bo_v_file a {display:inline-block;color:#4ac7ff;text-decoration:underline;word-wrap:break-word}
 #bo_v_file a:focus, #bo_v_file a:hover, #bo_v_file a:active {text-decoration:none}
 #bo_v_file img {float:left;margin:0 10px 0 0}
 .bo_v_file_cnt  {position:absolute;top:5px;right:10px;color:#888;font-size:0.92em}
@@ -230,7 +230,7 @@ box-shadow: inset 0 2px 5px rgb(33, 135, 202);
 #bo_v_link h2 {padding:10px;border-bottom:1px solid #e8e8e8;background: #f3f3f3}
 #bo_v_link ul {margin:0;padding:5px 0;list-style:none}
 #bo_v_link li {padding:5px 10px;position:relative;}
-#bo_v_link a {display:inline-block;color:#3497d9;text-decoration:underline;word-wrap:break-word}
+#bo_v_link a {display:inline-block;color:#4ac7ff;text-decoration:underline;word-wrap:break-word}
 #bo_v_link a:focus, #bo_v_link a:hover, #bo_v_link a:active {text-decoration:none}
 .bo_v_link_cnt {position:absolute;top:5px;right:10px;color:#888;font-size:0.92em}
 
