--- a/gnuboard5/theme/basic/skin/qa/basic/style.css
+++ b/gnuboard5/theme/basic/skin/qa/basic/style.css
@@ -205,7 +205,7 @@ html.no-overflowscrolling #autosave_pop {height:auto;max-height:10000px !importa
 #bo_v_file h2 {margin:0;padding:0;height:0;overflow:hidden}
 #bo_v_file ul {margin:0;padding:5px 0;list-style:none}
 #bo_v_file li {padding:5px 10px;position:relative;}
-#bo_v_file a {display:inline-block;color:#3497d9;text-decoration:underline;word-wrap:break-word}
+#bo_v_file a {display:inline-block;color:#4ac7ff;text-decoration:underline;word-wrap:break-word}
 #bo_v_file a:focus, #bo_v_file a:hover, #bo_v_file a:active {text-decoration:none}
 #bo_v_file img {float:left;margin:0 10px 0 0}
 .bo_v_file_cnt  {position:absolute;top:5px;right:10px;color:#888;font-size:0.92em}
