--- a/gnuboard5/skin/board/wowQuest/style.css
+++ b/gnuboard5/skin/board/wowQuest/style.css
@@ -169,6 +169,19 @@ box-shadow: inset 0 2px 5px  rgba(255,255,255,0.3);}
 #bo_sch .sch_btn{height:38px;float:left;background:none;border:0;width:40px;font-size:15px;color:#eee;}
 
 
+#bo_sch {color:#eee;width:100%;margin-bottom:10px;padding:10px;}
+#bo_sch label{float:left;display:block;line-height:36px;width:60px;padding:0 5px;}
+#bo_sch select{width:100px;border: 1px solid #444;}
+#bo_sch button.sch_btn{float:right;margin-right:10px;border:1px solid #444;padding:0 20px;width:120px;height:30px;}
+#bo_sch div.search_group{border:1px solid #444;margin: 10px auto;}
+#bo_sch div.search_group span {margin-left:3px;}
+
+#bo_sch ul.checkButton span{margin-left:3px;}
+#bo_sch ul.checkButton li{display:inline-block;margin:10px;min-width:140px;}
+#bo_sch ul.checkButton li input{margin-right:2px;}
+
+
+
 /* 게시판 쓰기 */
 #char_count_desc {display:block;margin:0 0 5px;padding:0}
 #char_count_wrap {margin:5px 0 0;text-align:right}
