--- a/gnuboard5/skin/board/basic/style.css
+++ b/gnuboard5/skin/board/basic/style.css
@@ -368,7 +368,7 @@ box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);}
 /*글쓰기*/
 #bgSelect{display: inline}
 #bgSelect  li{display: inline-block}
-#bo_w .write_div{margin:10px 0;position:relative;color:#eee;}
+#bo_w .write_div{margin:10px 0;position:relative;color:#444;}
 #bo_w .bo_w_info:after {display:block;visibility:hidden;clear:both;content:""}
 #bo_w .bo_w_info .frm_input{float:left;width:33%}
 #bo_w #wr_password{margin:0 0.5%  }
